# github-actions-learn4

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
data/: sample_input.csv
src/: main.py
tests/: test_main.py
