# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
#backend-path = ["."]

[project]
name = "my_data_project_src_main"
version = "0.1.0"
description = "A simple data transformation project (src/main.py) using pandas and numpy, with CI/CD via GitHub Actions and logging." # Updated description
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Inzamam", email = "inzamamshajahan@gmail.com"},
]
dependencies = [
    "pandas==2.2.3",
    "numpy==2.0.2"
]
[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov",
    "mypy==1.15.0",
    "ruff==0.11.10",
    "bandit==1.8.3",
    "safety==3.5.1",
    "pre-commit==4.2.0",
    "types-PyYAML==6.0.12.20250516",
    "pandas-stubs==2.2.3.250308", # Ensure a comma here if it's not the absolute last item before ]
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 200 # This top-level option is fine

[tool.ruff.lint] # Create this new sub-table for linter-specific options
select = ["E", "W", "F", "I","C", "B", "UP", "PT", "SIM"]
ignore = []
# You can also add other lint-specific options here like:
# fixable = ["ALL"] # To enable fixing for all rules that support it
# unfixable = []

[tool.ruff.format] # This sub-table remains the same
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
plugins = ["numpy.typing.mypy_plugin"]
mypy_path = "src"  # <--- ADD THIS LINE
# An alternative environment variable MYPYPATH=src also works but config is cleaner.

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=main --cov-report=term-missing --cov-fail-under=60"
testpaths = ["tests"]
# Optional: Pytest log configuration can go here if needed
# log_cli = true
# log_cli_level = INFO

[tool.bandit]
